exports[`test renders a contact 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-around",
        "padding": 10,
      }
    }>
    <View
      style={
        Object {
          "flex": 1,
        }
      }>
      <Image
        source={1}
        style={
          Object {
            "flex": 1,
            "height": 32,
            "width": 32,
          }
        }
        uri={undefined} />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "flex": 5,
          "fontSize": 20,
          "textAlign": "left",
        }
      }>
      Nicolaus
       
      Copernicus
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "lightgrey",
          "flex": 1,
          "fontSize": 24,
          "marginRight": 5,
          "textAlign": "right",
        }
      }>
      ★
    </Text>
  </View>
</View>
`;

exports[`test renders an active contact 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-around",
        "padding": 10,
      }
    }>
    <View
      style={
        Object {
          "flex": 1,
        }
      }>
      <Image
        source={1}
        style={
          Object {
            "flex": 1,
            "height": 32,
            "width": 32,
          }
        }
        uri={undefined} />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "flex": 5,
          "fontSize": 20,
          "textAlign": "left",
        }
      }>
      Nicolaus
       
      Copernicus
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "dodgerblue",
          "flex": 1,
          "fontSize": 24,
          "marginRight": 5,
          "textAlign": "right",
        }
      }>
      ★
    </Text>
  </View>
</View>
`;
